2007-08-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (configure_pipeline):
	Fix case where we have an audio only stream.
	* flumotion/component/dvb/dvb.xml:
	Should not be synchronised because we don't have a clock yet
	in the ts demuxer.

2007-08-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string,
	  _bus_message_received_cb):
	Set check-imperfect-timestamp to True not leave it in thin air!
	Add message when we receive disconts from decoders that are
	> 10 seconds or negative.

2007-08-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string,
	  configure_pipeline):
	Always add an identity check-imperfect-timestamp after
	decoders. Also add pad monitors to the src pads of the
	decoders so we go hungry when there is no data.

2007-07-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.init, DVB.do_check,
	  DVB.get_pipeline_string):
	Check for dvbsrc version and start of using new properties
	when able.
	Replace stupid par assignment.

2007-07-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	dvb producer does not need to have such a high clock
	priority so use the default clock priority.

2007-07-04  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/dvb/dvb.xml:
	Add missing dependency.

2007-06-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string):
	Fix use of scaled_width that may not be initialised.

2007-05-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string):
	* flumotion/component/dvb/dvb.xml:
	Add deinterlacing support using a real deinterlacer.

2007-04-05  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* configure.ac:
	Back to dev.

== release 0.4.1 ==
